[gd_scene load_steps=8 format=3 uid="uid://fq2o6qggd27f"]

[ext_resource type="Script" path="res://scripts/icebolt.gd" id="1_4fjp3"]

[sub_resource type="Gradient" id="Gradient_hngfo"]
interpolation_mode = 1
colors = PackedColorArray(0, 0.672105, 0.560277, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xixq4"]
gradient = SubResource("Gradient_hngfo")
width = 8
height = 8
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.807339, 0.201835)

[sub_resource type="Gradient" id="Gradient_fl76i"]
offsets = PackedFloat32Array(0.00649351, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u4q3o"]
gradient = SubResource("Gradient_fl76i")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.821101, 0.16055)

[sub_resource type="CircleShape2D" id="CircleShape2D_vkh0m"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b58i3"]
radius = 20.0

[node name="Icebolt" type="Node2D"]
z_index = 2
z_as_relative = false
script = ExtResource("1_4fjp3")
velocity = 100.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("GradientTexture2D_xixq4")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 0.647059, 0.74902, 1)
shadow_enabled = true
texture = SubResource("GradientTexture2D_u4q3o")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vkh0m")

[node name="CollisionDespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Ray" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true

[node name="IceArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="IceArea"]
shape = SubResource("CircleShape2D_b58i3")

[node name="IceDropTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="CollisionDespawnTimer" to="." method="despawn"]
[connection signal="body_entered" from="IceArea" to="." method="_on_ice_area_body_entered"]
[connection signal="timeout" from="IceDropTimer" to="." method="_on_ice_drop_timer_timeout"]
